--- a/canlistore-admin.css
+++ b/canlistore-admin.css
@@ -1,4 +1,4 @@
-.cashdesk-products-listing .product div{
+.cashdesk-products-listing .product .cashdesk-product-image{
 	height: auto;
 }
 .cashdesk-products-listing .product{
