--- a/canlistore-admin.css
+++ b/canlistore-admin.css
@@ -1,6 +1,4 @@
-:root {
-    --admin-css-version: "2.0";
-}
+/* version: 2.1 */
 
 .cashdesk-products-listing .product div{
 	height: auto !important;
